--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ddddxxx Blog
+title: ddddxxx's Blog
 SEOTitle: ddddxxx的博客 | ddddxxx's Blog
 header-img: img/home-bg.jpg
 email: dengxiang2008@gmail.com
