--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: ddddxxx's Blog
 SEOTitle: ddddxxx的博客 | ddddxxx's Blog
-header-img: img/home-bg.jpg
+header-img: img/header-img/hyla.jpg
 email: dengxiang2008@gmail.com
 description: ""
 keyword: ""
