--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-# ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-# ga_domain: huangxuan.me
+ga_track_id: 'UA-104094252-1'            # Format: UA-xxxxxx-xx
+ga_domain: ddddxxx.github.io
 
 
 
