--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 
 # SNS settings
-RSS: false
+RSS: true
 # weibo_username:     ddddxxx
 # zhihu_username:     ddddxxx
 github_username:    ddddxxx
