--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,9 @@ friends: [
     {
         title: "且听书吟",
         href: "https://yufan.me"
+    },
+    {
+        title: "ギャラ",
+        href: "https://blog.gyara.moe"
     }
 ]
